20_zoo/hydrogen/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydrogen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hydrogen
  template:
    metadata:
      labels:
        app: hydrogen
    spec:
      containers:
      - name: hydrogen
        image: roskenet/hydrogen:0.0.6
        ports:
        - name: www
          containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: hydrogen
spec:
  selector:
    app: hydrogen
  ports:
  - protocol: TCP
    port: 80
    targetPort: www

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydrogen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "hydrogen"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hydrogen
                port:
                  number: 80
