20_zoo/hydrogen/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydrogen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "hydrogen"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hydrogen
                port:
                  number: 80
